# py23

./: .gitignore  .pylintrc  MANIFEST.in  README.md  conftest.py  history.txt  makefile  setup.cfg  setup.py
.github/workflows/: pep257.yml  py2.yml  py3.yml  pythonpackage.yml  tests.yml
py23/: __init__.py
tests/: requirements.txt  test_init.py
tests/test/: test_init.py
