[metadata]
name = py23
version = 1.2
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Python 2/3 compatible functions pack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/py23
project_urls =
    Bug Tracker = https://github.com/vb64/py23/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = py23
include_package_data=True
